--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
     <title>Calculator</title>
 </head>
 <body>
+
+    <div class="main-container">
+        <div class="title-logo">
+            &#127757 CAL-CULIS
+        </div>
+    </div>
     
 </body>
 </html>
