Create and style display and button  containers

--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
 
     <div class="main-container">
         <div class="title-logo">
-            &#127757 CAL-CULIS
+            <p class="logo">&#127757 CAL-CULIS</p>
+        </div>
+
+        <div class="display"></div>
+
+        <div class="keys">
+            <div class="butt-set1"></div>
+            <div class="butt-set2"></div>
+
         </div>
     </div>
     
