--- a/index.html
+++ b/index.html
@@ -18,8 +18,31 @@
         <div class="display"></div>
 
         <div class="keys">
-            <div class="butt-set1"></div>
-            <div class="butt-set2"></div>
+            <div class="butt-set1">
+                <div class="button1" id="one">1</div>
+                <div class="button1" id="one">2</div>
+                <div class="button1" id="one">3</div>
+                <div class="button1" id="one">4</div>
+                <div class="button1" id="one">5</div>
+                <div class="button1" id="one">6</div>
+                <div class="button1" id="one">7</div>
+                <div class="button1" id="one">8</div>
+                <div class="button1" id="one">9</div>
+                <div class="button1" id="one">.</div>
+                <div class="button1" id="one">0</div>
+                <div class="button1" id="one">=</div>
+                <div class="button1"></div>
+                <div class="button1" id="one">&#127757</div>
+                <div class="button1"></div>
+            </div>
+            <div class="line"></div>
+            <div class="butt-set2">
+                <div class="button2" id="one" style="background-color: red;">C</div>
+                <div class="button2" id="one">+</div>
+                <div class="button2" id="one">-</div>
+                <div class="button2" id="one">*</div>
+                <div class="button2" id="one">/</div>
+            </div>
 
         </div>
     </div>
