--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
     <title>Calculator</title>
 </head>
 <body>
@@ -15,37 +15,38 @@
             <p class="logo">&#127757 CAL-CULIS</p>
         </div>
 
-        <div class="display"></div>
+        <div class="display">0</div>
 
         <div class="keys">
             <div class="butt-set1">
-                <div class="button1" id="one">1</div>
-                <div class="button1" id="one">2</div>
-                <div class="button1" id="one">3</div>
-                <div class="button1" id="one">4</div>
-                <div class="button1" id="one">5</div>
-                <div class="button1" id="one">6</div>
-                <div class="button1" id="one">7</div>
-                <div class="button1" id="one">8</div>
-                <div class="button1" id="one">9</div>
-                <div class="button1" id="one">.</div>
-                <div class="button1" id="one">0</div>
-                <div class="button1" id="one">=</div>
+                <div class="button1 butt" id="one">1</div>
+                <div class="button1 butt" id="two">2</div>
+                <div class="button1 butt" id="three">3</div>
+                <div class="button1 butt" id="four">4</div>
+                <div class="button1 butt" id="five">5</div>
+                <div class="button1 butt" id="six">6</div>
+                <div class="button1 butt" id="seven">7</div>
+                <div class="button1 butt" id="eight">8</div>
+                <div class="button1 butt" id="nine">9</div>
+                <div class="button1 butt" id="comma">.</div>
+                <div class="button1 butt" id="zero">0</div>
+                <div class="button1" id="equal">=</div>
                 <div class="button1"></div>
-                <div class="button1" id="one">&#127757</div>
+                <div class="button1" id="logo">&#127757</div>
                 <div class="button1"></div>
             </div>
             <div class="line"></div>
             <div class="butt-set2">
-                <div class="button2" id="one" style="background-color: red;">C</div>
-                <div class="button2" id="one">+</div>
-                <div class="button2" id="one">-</div>
-                <div class="button2" id="one">*</div>
-                <div class="button2" id="one">/</div>
+                <div class="button2 butt" id="clear" style="background-color: red;">C</div>
+                <div class="button2 butt" id="plus">+</div>
+                <div class="button2 butt" id="minus">-</div>
+                <div class="button2 butt" id="times">*</div>
+                <div class="button2 butt" id="divide">/</div>
             </div>
 
         </div>
     </div>
+    
     
 </body>
 </html>
