Limit answer to 12 digits, bg color on hover and bg color of operator buttons

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="button1 butt" id="nine">9</div>
                 <div class="button1 butt" id="comma">.</div>
                 <div class="button1 butt" id="zero">0</div>
-                <div class="button1" id="equal">=</div>
+                <div class="button1 butt" id="equal">=</div>
                 <div class="button1"></div>
                 <div class="button1" id="logo">&#127757</div>
                 <div class="button1"></div>
@@ -38,10 +38,10 @@
             <div class="line"></div>
             <div class="butt-set2">
                 <div class="button2 butt" id="clear" style="background-color: red;">C</div>
-                <div class="button2 butt" id="plus">+</div>
-                <div class="button2 butt" id="minus">-</div>
-                <div class="button2 butt" id="times">*</div>
-                <div class="button2 butt" id="divide">/</div>
+                <div class="button2 butt op" id="plus">+</div>
+                <div class="button2 butt op" id="minus">-</div>
+                <div class="button2 butt op" id="times">*</div>
+                <div class="button2 butt op" id="divide">/</div>
             </div>
 
         </div>
