Fix equal button bug

--- a/index.html
+++ b/index.html
@@ -19,29 +19,29 @@
 
         <div class="keys">
             <div class="butt-set1">
-                <div class="button1 butt" id="one">1</div>
-                <div class="button1 butt" id="two">2</div>
-                <div class="button1 butt" id="three">3</div>
-                <div class="button1 butt" id="four">4</div>
-                <div class="button1 butt" id="five">5</div>
-                <div class="button1 butt" id="six">6</div>
-                <div class="button1 butt" id="seven">7</div>
-                <div class="button1 butt" id="eight">8</div>
-                <div class="button1 butt" id="nine">9</div>
-                <div class="button1 butt" id="comma">.</div>
-                <div class="button1 butt" id="zero">0</div>
-                <div class="button1 butt" id="equal">=</div>
+                <div class="button1 butt hov" id="one">1</div>
+                <div class="button1 butt hov" id="two">2</div>
+                <div class="button1 butt hov" id="three">3</div>
+                <div class="button1 butt hov" id="four">4</div>
+                <div class="button1 butt hov" id="five">5</div>
+                <div class="button1 butt hov" id="six">6</div>
+                <div class="button1 butt hov" id="seven">7</div>
+                <div class="button1 butt hov" id="eight">8</div>
+                <div class="button1 butt hov" id="nine">9</div>
+                <div class="button1 butt hov" id="comma">.</div>
+                <div class="button1 butt hov" id="zero">0</div>
+                <div class="button1 hov" id="equal">=</div>
                 <div class="button1"></div>
                 <div class="button1" id="logo">&#127757</div>
                 <div class="button1"></div>
             </div>
             <div class="line"></div>
             <div class="butt-set2">
-                <div class="button2 butt" id="clear" style="background-color: red;">C</div>
-                <div class="button2 butt op" id="plus">+</div>
-                <div class="button2 butt op" id="minus">-</div>
-                <div class="button2 butt op" id="times">*</div>
-                <div class="button2 butt op" id="divide">/</div>
+                <div class="button2 butt hov" id="clear" style="background-color: red;">C</div>
+                <div class="button2 butt op hov" id="plus">+</div>
+                <div class="button2 butt op hov" id="minus">-</div>
+                <div class="button2 butt op hov" id="times">*</div>
+                <div class="button2 butt op hov" id="divide">/</div>
             </div>
 
         </div>
