Some more CSS styling

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="main-container">
         <div class="title-logo">
-            <p class="logo">&#127757 CAL-CULIS</p>
+            <p class="logo">&#127757 WENZ-L</p>
         </div>
 
         <div class="display">0</div>
